# 3-1-CG-FinalProject

./: .gitignore  README.md
code/: CMakeLists.txt  Makefile
code/include/: BillboardRenderer.h  Camera.h  Fireworks.h  Ground.h  House.h  Lake.h  LakeShore.h  Lantern.h  Light.h  Mountain.h  ObjLoader.h  Particle.h  ParticleRenderer.h  Sky.h  Skybox.h  Torii.h  Tree.h  utils.h
code/patterns/: gen.py  long.h  maomaochong.h  msc.h  taffy.h
code/shaders/: blur.frag  bright_extract.frag  ground.frag  ground.vert  house.frag  house.vert  lantern.frag  lantern.vert  mountain.frag  mountain.vert  mountain_3d.frag  object.frag  object.vert  particle.frag  particle.vert  particle_billboard.frag  particle_billboard.vert  sky.frag  sky.vert  skybox.frag  skybox.vert  tonemap.frag  torii.frag  torii.vert  tree.frag  tree.vert  tree_leaf.frag  tree_leaf.vert  water.frag  water.vert
code/src/: BillboardRenderer.cpp  Camera.cpp  Fireworks.cpp  Ground.cpp  House.cpp  Lake.cpp  LakeShore.cpp  Lantern.cpp  Mountain.cpp  ObjLoader.cpp  Particle.cpp  ParticleRenderer.cpp  Sky.cpp  Skybox.cpp  Torii.cpp  Tree.cpp  main.cpp  tiny_obj_loader.cc  utils.cpp
static/objects/: shrine.mtl  sky.mtl  sysu.mtl
static/objects/textures/: Tex_0037_3.tga  Tex_0038_3.tga
tech_report/: group_report.md
